# passport-scorer

./: .dockerignore  .env.development  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  API_KEY_PERFORMANCE_FIX.md  CI_RUST_ARTIFACT_REUSE_PR.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_SCHEMA_REFERENCE.md  Dockerfile  ENDPOINTS_EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.txt  FUTURE_DATA_ARCHITECTURE.md  INTERNAL_API_RUST_MIGRATION_GUIDE.md  LICENSE  MTA_POINTS_IMPLEMENTATION.md  Pipfile  ROUTING_ANALYSIS_INDEX.md  ROUTING_REFACTOR_SUMMARY.txt  RUST_DEVELOPMENT_QUICKSTART.md  RUST_MIGRATION_PLAN.md  RUST_PYTHON_ENDPOINTS_COMPARISON.md  RUST_SCORER_EXPANSION_IMPLEMENTATION_GUIDE.md  RUST_SCORER_SCHEMA_ADDENDUM.md  RUST_WEIGHTED_ROUTING_HANDOFF.md  RUST_ZIP_DEPLOYMENT_CHANGES.md  Readme.md  SETUP.md  SMART_WALLET_AUTHENTICATION.md  TODO.md  WEIGHTED_ROUTING_BLOCKER_ANALYSIS.md  WEIGHTED_ROUTING_CURRENT_STATE.md  WEIGHTED_ROUTING_IMPLEMENTATION_GUIDE.md  WEIGHTED_ROUTING_QUICK_REFERENCE.md  distill-report.md  docker-compose-lambda.yml  docker-compose.yml  human-points-django-spec.md  (+7 more)
api/: .env-sample  Dockerfile  Dockerfile.python3.11  Pipfile  api_logging.py  conftest.py  cpy_export_summary.json  cpy_my_scores.parquet  cpy_registry_score.jsonl  docker-compose.yml  dump.rdb  extract_sql_queries.py  extract_sql_queries_v2.py  get_errors.py  keep_only_biggest_eth_stamp.py  lambda_function.py  manage.py  pyproject.toml  query_events.py  requirements.txt  split_addresses.py  tox.ini
api/account/: admin.py  api.py  api_key_validator.py  api_wallet_groups.py  apps.py  linkage.py  models.py  schema.py  siwe_validation.py  tests.py  urls.py  views.py
api/app_api/: README.md  lambda_fn.py
api/aws_lambdas/: Readme.md  docker-compose-lambda.yml  exceptions.py  rescore.py  utils.py
api/ceramic_cache/: admin.py  api.py  apps.py  exceptions.py  models.py  utils.py
api/cgrants/: admin.py  api.py  apps.py  models.py
api/data_model/: admin.py  models.py
api/embed/: README.md  api.py  lambda.py  lambda_fn.py
api/internal/: api.py  api_key.py  bans_revocations.py  exceptions.py  schema.py
api/lambda_test/: hello.py  lambda.py
api/passport/: api.py
api/passport_admin/: admin.py  api.py  apps.py  generate_notifications.py  models.py  schema.py  tests.py
api/reader/: apps.py  passport_reader.py  tests.py
api/registry/: admin.py  api.py  apps.py  atasks.py  bulk-mbd-analysis.md  exceptions.py  filters.py  human_points_utils.py  issuer_manager.py  models.py  permissions.py  serializers.py  signals.py  static_credential_types.json  tasks.py  urls.py  utils.py  views.py  weight_models.py
api/scorer/: api.py  celery.py  db_router.py  export_utils.py  pipeline.py  scorer_admin.py  settings.py  urls.py
api/scorer_apu/: admin.py  models.py
api/scorer_ui/: .env-sample  package-lock.json  package.json
api/scorer_weighted/: admin.py  apps.py  computation.py  models.py  serializers.py  urls.py  views.py
api/scripts/: debug_erc6492.py  package-lock.json  package.json  verify_erc6492.js
api/stake/: admin.py  api.py  apps.py  models.py  schema.py
api/tos/: admin.py  api.py  apps.py  models.py  schema.py
api/trusta_labs/: admin.py  api.py  apps.py  models.py
api/v2/: api.py  api_models.py  api_stamps.py  exceptions.py  schema.py
indexer/: .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  Readme.md  anvil-testing-plan.md  diagnose_ws.js  final_test.js  index.ts  monitor_ws_health.js  package.json  test-indexer.sh  test-one.sh  test-plan.md  test_ethers_style.js  test_human_points_output.txt  test_simple.js  test_ws_request.js  tsconfig.json
indexer/abis/: IDStaking.json
indexer/ca-certificates/: README.md  all.pem
indexer/e2e_tests/: .gitignore
indexer/src/: IdentityStaking.json  chain_config.rs  debug_staking_indexer.rs  debug_utils.rs  debug_ws_provider.rs  human_points_indexer.rs  index.ts  legacy_staking_indexer.rs  main.rs  postgres.rs  sql_generation.rs  staking_indexer.rs  unified_indexer.rs  utils.rs
indexer/storage/: postgres.ts
indexer/tests/: e2e_tests.rs  run_e2e_tests.py
load_tests/test_data/: .env-example  Pipfile  README.md  config.py  generate_test_accounts.py  generate_test_vcs.py  iam_signer_server.js  package-lock.json  package.json  pyproject.toml
rust-scorer/: .gitattributes  .gitignore  CLAUDE.md  CLEANUP.md  CODEBASE_CLEANUP_TASKS.md  COLLECTOR_FIX.md  Cargo.toml  Dockerfile.lambda  INTERNAL_API_PROGRESS.md  JAEGER_ISSUE.md  LAMBDA_DEPLOYMENT.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  SQLX_METADATA_INSTRUCTIONS.md  TELEMETRY_IMPLEMENTATION_PLAN.md  TELEMETRY_SETUP.md  TELEMETRY_STATUS.md  TESTING.md  TEST_README.md  analyze-performance.sh  build-lambda-zip.sh  build-lambda.sh  collector.yaml  docker-compose.jaeger.yml  docker-compose.yml  quick_compare.py  stub_sqlx.sh  test-spans-http.rs  test-telemetry.sh  uncomment_queries.sh
rust-scorer/.knowledge/: KNOWLEDGE_MAP.md  KNOWLEDGE_MAP_CLAUDE.md  architecture.md  code-organization.md  testing.md
rust-scorer/.sqlx/: query-002da83c82c68ec03e9fbea183237bf904cedc37f499ab16ca7c719dfa1080c1.json  query-0224d6fffe72cfa418b4bf4cef3f8bd3cacaa359a6ad7451899ef86c5302b2c8.json  query-104317a5c219b8fc577d07901e43cc6967e156dd7a45b88ece80fb35469256ab.json  query-20767d60a98ad5207b05bc2b98fd30e7d4149d26e81944da6bcf76c7418d91f3.json  query-24e4d7c7ffadc5e7d9fa4fa6e4f2282cf7e9766eed1a94112f1bf4ea8f2b2da0.json  query-30756cba23cc7fa388c9edc4154f899a0238f14da3e99910cc221389e1eeb830.json  query-5f97c8814be58cdb358a20be1d47f1b328771005e42162f785c554f8ce012430.json  query-63688879f72c89375de8dc17fe71f1deffa7a4f2334ceae2ea15c9cb0d39c9b5.json  query-649604204a15ac9e8a12b2b16f1dfd43626fd2aca04813faa56f56a0c82c98c9.json  query-689e1bba9efa7bd0db343340a1f4f641ef4bd8a13df3c0b8aac87a99eb67642f.json  query-6cf300ed02bcde519be605ccaef21c6f1e8ef6487255089aab27ed7ee62e1aad.json  query-921bd9ac38de67ab24417fc92e4d065f078e3f04b1a067f4b7454dc561027cca.json  query-9683ecd64d99f2f086ab3a89c100b31cb96b2bf74cda5e34ea6143e06e30caa1.json  (+13 more)
rust-scorer/comparison-tests/: CLAUDE.md  Cargo.toml  HANDOFF.md  (+2 more)
(+1250 files in other folders)
