[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for Gitcoin Scorer"
authors = ["Your Name <you@example.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "*"
markdown = "*"
django-extensions = "*"
didkit = "*"
uvicorn = "*"
gunicorn = "*"
whitenoise = "*"
pyyaml = "*"
uritemplate = "*"
django-cors-headers = "*"
django-environ = "*"
django-ninja = "==0.22.2"
django-ninja-jwt = "*"
django-ninja-extra = "*"
web3 = "*"
siwe = "*"
psycopg2-binary = "*"
djangorestframework-api-key = "==2.*"
celery = {extras = ["redis"], version = "*"}
requests = "*"
social-auth-app-django = "*"
dag-cbor = "*"
py-cid = "*"
django-ratelimit = "*"
ninja_schema = "*"
structlog = "*"
django-structlog = "*"
django-ipware = "*"
django-debug-toolbar = "*"
django-filter = "*"
boto3 = "*"
tqdm = "*"
gql = "*"
requests-toolbelt = "*"
pyarrow = "*"
pynacl = "*"
faker = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pylint = "*"
pylint-django = "*"
coverage = "*"
pytest-django = "*"
pytest-bdd = "*"
pytest-mock = "*"
django-stubs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
