[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
deadpool-postgres = "0.11.0"
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = ["abigen", "ws"] }
eyre = "0.6.8"
futures = "0.3.29"
mockall = "0.11.4"
rust_decimal = { version = "1.32", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.32"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.12"
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tokio-test = "0.4"
portpicker = "0.1"

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"
harness = true
