[package]
name = "passport-scorer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Lambda runtime
lambda-web = "0.2"
lambda_runtime = "0.14"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "json", "chrono", "rust_decimal", "uuid", "macros"
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Credential validation
didkit = "*"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde-float", "db-postgres"] }
rust_decimal_macros = "1.37"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hex = "0.4"
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
