[package]
name = "passport-scorer"
version = "0.1.0"
edition = "2024"
default-run = "passport-scorer"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Lambda runtime (optional)
lambda-web = { version = "0.2", optional = true }
lambda_runtime = { version = "0.14", optional = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "json", "chrono", "rust_decimal", "uuid", "macros"
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Credential validation
didkit = "*"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde-float", "db-postgres"] }
rust_decimal_macros = "1.37"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
constant_time_eq = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tower = { version = "0.4", features = ["util"] }

[features]
default = []
lambda = ["lambda-web", "lambda_runtime"]
