[tool.poetry]
name = "test-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
didkit = "*"
web3 = "*"
isort = "*"
python-dotenv = "*"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
