[package]
name = "comparison-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compare"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
dotenvy = "0.15"
libc = "0.2"
